[gd_scene load_steps=13 format=3 uid="uid://bhyraw447lleq"]

[ext_resource type="Script" path="res://Trash/TrashScript.gd" id="1_bdk4d"]
[ext_resource type="Shader" uid="uid://e4bkfgumedit" path="res://hit_flash_shader.tres" id="2_jpdrq"]
[ext_resource type="Texture2D" uid="uid://cd8xp1svjyt44" path="res://Trash/TrashTextures/OldShoes.png" id="2_te0q8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v5n20"]
resource_local_to_scene = true
shader = ExtResource("2_jpdrq")
shader_parameter/val = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0f6p2"]
size = Vector2(165, 70.5)

[sub_resource type="Animation" id="Animation_f8o0p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container/Container/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Container/Container/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Container/Container/Sprite2D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_p2xyi"]
resource_name = "Shoe"
loop_mode = 1

[sub_resource type="Animation" id="Animation_68nxx"]
resource_name = "bobbing"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container/Container/Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0523599, 0.0, -0.0523599, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Container/Container/Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -30), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_md43t"]
_data = {
"RESET": SubResource("Animation_f8o0p"),
"Shoe": SubResource("Animation_p2xyi"),
"bobbing": SubResource("Animation_68nxx")
}

[sub_resource type="Animation" id="Animation_bsmn5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container/Container:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Container/Container:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Container/Container:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Container/Container/Sprite2D:material:shader_parameter/val")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_e2p0m"]
resource_name = "trash_pickup"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container/Container:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.533333),
"transitions": PackedFloat32Array(0.31864, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -100)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Container/Container:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 1),
"transitions": PackedFloat32Array(0.241484, 2.54912, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.4, 1.4), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Container/Container:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.290196)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"go_towards_boat"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Container/Container/Sprite2D:material:shader_parameter/val")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.217638, 1),
"update": 0,
"values": [0.333, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uqka5"]
_data = {
"RESET": SubResource("Animation_bsmn5"),
"trash_pickup": SubResource("Animation_e2p0m")
}

[node name="Trash" type="Area2D" groups=["Player", "Trash"]]
z_index = 3
scale = Vector2(1.5, 1.5)
script = ExtResource("1_bdk4d")

[node name="Container" type="Node2D" parent="."]

[node name="Container" type="Node2D" parent="Container"]

[node name="Sprite2D" type="Sprite2D" parent="Container/Container"]
material = SubResource("ShaderMaterial_v5n20")
texture = ExtResource("2_te0q8")

[node name="WaterSprite" type="Sprite2D" parent="."]
visible = false
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
z_index = 2
z_as_relative = false
position = Vector2(0, 5.25)
shape = SubResource("RectangleShape2D_0f6p2")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false
scale = Vector2(9.3, 4.6)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_md43t")
}
speed_scale = 0.8

[node name="TrashPickup" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uqka5")
}

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="animation_finished" from="TrashPickup" to="." method="_on_trash_pickup_animation_finished"]
